# INNFOS_ACTUATOR-SDK-ARM64

./: .gitignore  CMakeLists.txt  INNFOS执行器SDK说明文档v0.1.odt  main.cpp  test.cpp  test.h
motorscontrolLib/include/: motorscontroller.h
motorscontrolLib/include/QtCore/: qconfig.h
motorscontrolLib/lib/: copy.sh  libQt5Network.so.5.7.1  libgcc_s.so.1  libmotorsControll.so.1.0.0  libstdc++.so.6.0.21
